Agregando cambios finales en controlador de productos

--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -11,7 +11,7 @@
 
     <main>
         <div class="titulo-detalle">
-            <h2> <%= product.name %> </h2>
+            <h2> <%= product.p_name %> </h2>
         </div>
 
         <section class="detalle">
