--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -13,19 +13,17 @@
         <h3 style="text-align: center;">Id número <%=productToEdit.id%></h3>
         <div class="form-edicion">
       <!--
-              <form action="/productos/<%=productToEdit.id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
+              <form action="/productos/<%=productToEdit.product_id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
                         <button type="submit">Eliminar</button>
       -->
-            <form action="/productos/edit/<%=productToEdit.id%>?_method=PATCH" method="POST" enctype="multipart/form-data">
+            <form action="/productos/edit/<%=productToEdit.product_id%>?_method=PATCH" method="POST" enctype="multipart/form-data">
                 <p>
-                    <label for="name">Nombre del producto:</label>
-                    <input type="text" id="name" name="name" class="input-text"
-                    value= <%= productToEdit.name %>>
+                    <label for="p_name">Nombre del producto:</label>
+                    <input type="text" id="p_name" name="p_name" class="input-text"
+                    value= <%= productToEdit.p_name %>>
                 </p>
                 <p> Imagen principal del producto </p>
                 <p><img src="/images/products/<%=productToEdit.image_p%>" style="width: 100px;"> </p>
-                    <label for="image_p">Seleccionar otra imagen</label>
-                    <input type="file" id="image_p" name="image_p" class="input-file">
                 </p>
 
                 <p>
@@ -83,9 +81,9 @@
                 </p>
 
                 <p>
-                    <label for="description">Descripción:</label>
-                    <textarea id="description" name="description" class="input-area">
-                        <%= productToEdit.description %>
+                    <label for="p_description">Descripción:</label>
+                    <textarea id="p_description" name="p_description" class="input-area">
+                        <%= productToEdit.p_description %>
                     </textarea>
                 </p>
 
@@ -115,7 +113,7 @@
                         <button type="reset">Cancelar</button>
                     </div>
             </form>
-                    <form action="/productos/<%=productToEdit.id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
+                    <form action="/productos/<%=productToEdit.product_id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
                         <button type="submit">Eliminar</button>
                     </form>
                 </div>
