--- a/src/views/edicionUser.ejs
+++ b/src/views/edicionUser.ejs
@@ -14,7 +14,7 @@
                 <h3>Datos Personales</h3>
             </div>
             <div class="form-registro">
-            <form action="/usuarios/edit" method="POST" enctype="multipart/form-data">
+            <form action="/usuarios/edit" method="POST"  >
                     <p class="elt-reg">
                         <label for="firstName">Nombre (s):</label>
                         <br>
@@ -31,14 +31,6 @@
                         <% if (locals.errors && errors.lastName) { %>
                             <div style="color: red; text-align: center;"><%= errors.lastName.msg %> </div>
                         <% } %>
-                    </p>
-
-                
-
-                    <p class="elt-reg">
-                        <label for="picture">Foto de usuario:</label>
-                        <br>
-                        <input type="file" id="picture" name="picture">
                     </p>
 
                     <p class="elt-reg">
