--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -16,7 +16,7 @@
 
         <section class="detalle">
             <article>
-                <img src="/images/products/<%= product.image_p%>" alt="Imagen del producto <%= product.p_name%> " class="img-p">
+                <img src="/images/products/<%= product.image_p%>" alt="Imagen del producto <%= product.name%> " class="img-p">
                 <div class="opciones-detalle">
                     <h3>Precio</h3>
                     <h3>$<%= product.price %> MXN</h3>
