--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <%- include('./partials/head') %>
-    <title>Animalandia</title>
+    <title>Login</title>
+    <script type="text/javascript" src="/scripts/login.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                     <label for="user"> Usuario:</label>
                 </p>
                 <p class="elt-login">
-                    <input type="email" id="email" name="email" placeholder="email@locotes.com">
+                    <input type="email" id="email" name="email" placeholder="email@locotes.com" class="email">
                 </p>
                 <% if (locals.errors && errors.email) { %>
                     <div style="color: red; text-align: center;"><%= errors.email.msg %> </div>
@@ -27,13 +28,17 @@
                     <label for="password">Contraseña</label>
                 </p>
                 <p class="elt-login">
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="password" name="password" class="password">
                 </p>
                 <% if (locals.errors && errors.password) { %>
                     <div style="color: red; text-align: center;"><%= errors.password.msg %> </div>
                 <% } %>
-                    <input type="checkbox" name="rememberMe" value="recuerdame">
-                    <label for="rememberMe"> Recuérdame </label>
+
+                <div class="errorsFront" style="color: red; text-align: center;">
+                    <ul></ul>
+                </div>
+
+
                 <div class="botones-login">
                         <button type="submit">Ingresar</button>
                 </div>
@@ -42,7 +47,6 @@
     </main>
 
     <%- include('./partials/footer') %> 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
+
 </body>
 </html>
