--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -107,6 +107,11 @@
                         value="<%= productToEdit.price %>">
                 </p>
 
+                
+                <div class="errorsFront" style="color: red; text-align: center;">
+                    <ul></ul>
+                </div>
+
                 <div>
                     <div class="botones-edicion">
                         <button type="submit">Enviar</button>
