Corrijiendo categorias en vista y controlador

--- a/src/views/crear.ejs
+++ b/src/views/crear.ejs
@@ -28,22 +28,21 @@
                 <div>
                     <label for="animal">Animal:</label>
                     <select name="animal" id="animal">
-                        <option value="Polygender" selected>Polygender</option>
-                        <option value="Male">Masculino</option>
-                        <option value="Female">Femenino</option>
-                        <option value="Genderqueer">Genderqueer</option>
-                        <option value="Non-binar">Non-binar</option>
+                        <option value="1" selected>Perros</option>
+                        <option value="2">Gatos</option>
+                        <option value="3">Roedores</option>
+                        <option value="4">Aves</option>
+                        <option value="5">Peces</option>
+                        <option value="6">Reptiles</option>
                     </select>
                     
                 </div>
                 <div>
                     <label for="category">Categorias:</label>
                     <select name="category" id="category">
-                        <option value="Bigender" selected>Bigender</option>
-                        <option value="Male">Masculino</option>
-                        <option value="Female">Femenino</option>
-                        <option value="Genderqueer">Genderqueer</option>
-                        <option value="Agender">Agender</option>
+                        <option value="1" selected>Alimento</option>
+                        <option value="2">Accesorios</option>
+                        <option value="3">vivienda</option>
                     </select>
                 </div>
                 <div>
