Agregando estilos a index.ejs

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -841,3 +841,8 @@ main .articulo-home img{
 	width: 100%;
 	
 }
+
+main div#articuloIndex:hover{
+	background-color: #b4b4b4;
+	transition: 200ms;
+}
