--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,23 @@
 <body> 
     <%- include('./partials/header') %>
     <main>
+
+        <section class="banner-top">
+            <div class="container">
+                <img src="/images/index/banner.jpg" id="dogos" alt="banner">
+                <div class="overlay">
+                    <div class="text">
+                        <h1>La mejor tienda de mascotas</h1>
+                        <p>La calidad de los productos es primordial para tu satisfacción y la de tu mascota.
+                            Nos esforzamos por mantenernos actualizados con las nuevas tendencias.
+                        </p>
+                        
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!--
         <p class="titulo">La mejor tienda de mascotas</p>
         <section class="top-main">
         <div class="top-grid">
@@ -40,12 +57,15 @@
             </div>
         </div>
         </section>
+    -->
+
         <section class="info-gral">
             <div class="separador">
                 <p> Principales productos</p>
             </div>
-        </section>
+        </section>-->
         <section class="">
+
             <!--Aqui el link de cada detalle de producto -->
             <div class="grid-container">
             <% for(let i = 0; i < 6 ; i++){ %> 
