--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,7 +63,7 @@
             <div class="separador">
                 <p> Principales productos</p>
             </div>
-        </section>-->
+        </section>
         <section class="">
 
             <!--Aqui el link de cada detalle de producto -->
