--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="header-top">
         <section class="logo-container">
-            <a href="/"><img src="../images/logo.png" class="logo" alt="Logo"></a>
+            <a href="/"><img src="/images/logo.png" class="logo" alt="Logo"></a>
         </section>
         <div class="alimentos">
             
